# ROCm-Oxide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Improvement.md  LICENSE-MIT  README.md  SECURITY.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_issue.yml  gpu_compat.yml
.github/workflows/: ci.yml  gpu-verification.yml
crates/rocm-oxide-device/: Cargo.toml
crates/rocm-oxide-device/src/: lib.rs
crates/rocm-oxide-kernel/: Cargo.toml
crates/rocm-oxide-kernel/src/: lib.rs
crates/rocm-oxide-kernel/tests/: smoke.rs
demo-projects/: README.md
demo-projects/bvh-raytrace-benchmark/: Cargo.toml  README.md
demo-projects/bvh-raytrace-benchmark/src/: main.rs
demo-projects/compiler-feature-lab/: Cargo.toml  README.md
demo-projects/compiler-feature-lab/src/: main.rs  visual_presenter.rs
demo-projects/gravity-storm/: Cargo.toml  README.md
demo-projects/matrix-lens/: Cargo.toml  README.md
demo-projects/matrix-lens/src/: main.rs
demo-projects/orbit-field/: Cargo.toml  README.md
demo-projects/orbit-field/src/: main.rs
demo-projects/path-reconstruction/: Cargo.toml  README.md
demo-projects/possibilities-window/: Cargo.toml  README.md
demo-projects/possibilities-window/src/: main.rs
demo-projects/rainbow-geometry/: Cargo.toml  README.md
demo-projects/rainbow-geometry/src/: main.rs
demo-projects/raytrace-world/: Cargo.toml  README.md
demo-projects/raytrace-world-gpuarray/: Cargo.toml  README.md
demo-projects/raytrace-world-gpuarray/src/: main.rs
demo-projects/raytrace-world/src/: main.rs
demo-projects/shared/: device_build.rs
demo-projects/spectral-lattice/: Cargo.toml  README.md
demo-projects/spectral-lattice/src/: main.rs
demo-projects/stress-gui/: Cargo.toml  README.md
demo-projects/upscale-artifacts/: Cargo.toml  README.md
demo-projects/vulkan-plasma/: Cargo.toml  README.md
demo-projects/vulkan-plasma/src/: main.rs
demo-projects/window-effects-lab/: Cargo.toml  README.md  build.rs
demo-projects/window-effects-lab/src/: main.rs
device-spike/: Cargo.toml
device-spike/src/: lib.rs
docs/: api-stability.md  api_overview.md  atomic-scopes.md  code-object-linking.md  compiler-path.md  cuda-future-work.md  cuda-oxide-book-rocm-adaptation.md  cuda-oxide-parity-checklist.md  debugger-workflow.md  editor-setup.md  external_consumer_plan.md  getting-started.md  hello_gpu.md  hello_gpu_rust.md  host-memory-coherence.md  implementation-tasks.md  index.md  kernel-contracts.md  production-readiness.md  project-generation.md  project_boundaries.md  project_generation.md  release-gates.md  release-profile-template.md  release.md  release_checklist.md  rocm-feature-parity.md  rocm-library-interop.md  scaffold-required-files.md  sdk-preview-restructure-plan.md  sdk_direction.md  stream-ordered-allocation.md  supported-rocm-gpu-matrix.md  toolchain-discovery.md  troubleshooting.md  unsafe-audit.md  visual-demos.md
docs/release-profiles/: 2026-06-05-jack-gfx1201.md  README.md
docs/wiki/: README.md  api_overview.md  atomic-scopes.md  code-object-linking.md  compiler-path.md  cuda-future-work.md  cuda-oxide-book-rocm-adaptation.md  cuda-oxide-parity-checklist.md  hello_gpu.md  hello_gpu_rust.md  implementation-tasks.md  kernel-contracts.md  release-gates.md  release_checklist.md  rocm-library-interop.md  scaffold-required-files.md  sdk_direction.md  stability-policy.md  stream-ordered-allocation.md  toolchain-discovery.md  unsafe-audit.md
examples/: README.md  bvh_raytrace_benchmark.rs  compiler_feature_lab.rs  depth_aware_upscale.rs  device_operation_chain.rs  feature_showcase.rs  gpu_algorithms.rs  gravity_storm.rs  hello_gpu.rs  hello_gpu_rust.rs  matrix_lens.rs  module_global.rs  performance_probe.rs  pinned_stream_vector_add.rs  possibilities_window.rs  rainbow_geometry_window.rs  raytrace_world_gui.rs  rust_device_add_one.rs  rust_device_generated_bindings.rs  rust_device_vector_add.rs  spectral_lattice.rs  stress_3d_gui.rs  stress_test_gui.rs  temporal_upscale.rs  validation_profile.rs  vector_add.rs  vulkan_interactive_path_reconstruction_fixed4.rs  vulkan_interactive_path_reconstruction_motion_denoise_v2.rs  vulkan_orbit_field.rs  vulkan_path_reconstruction.rs  vulkan_plasma_demo.rs  window_effects_lab.rs
examples/shared/: visual_presenter.rs
scripts/: compile-device-spike.sh  consumer-smoke.sh  first-user-path.sh  verify.sh
src/: gpu.rs  hip.rs  hiprtc.rs  lib.rs  libraries.rs  main.rs  operation.rs  parity.rs  profiling.rs  rocprim_shim.cpp  runtime.rs  testing.rs
tools/cargo-rocm-oxide/: Cargo.toml
tools/cargo-rocm-oxide/src/: main.rs
tools/cargo-rocm-oxide/tests/: verify_command.rs
tools/oxide-boost/: Cargo.toml
tools/oxide-boost/src/: gui.rs  main.rs
tools/rocm-oxide-build/: Cargo.toml
tools/rocm-oxide-build/src/: main.rs
