[package]
name = "rocm-oxide"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "ROCm-Oxide: a Rust-hosted ROCm/HIPRTC runtime and Rust device-code prototype."
documentation = "https://docs.rs/rocm-oxide"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rocm", "hip", "gpu", "rust", "amdgpu"]
categories = ["api-bindings", "development-tools::ffi", "hardware-support"]

[build-dependencies]

[dependencies]
ash = "0.38"
font8x8 = "0.3"
gl = "0.14"
image = "0.25"
libwayshot-xcap = "0.3"
minifb = "0.28"
pipewire = "0.9"
rand = "0.9"
sdl2 = "0.38"
serde = "1.0"
wayland-client = "0.31"
xcap = "0.9"
zbus = "5.6"
