[package]
name = "rocm-oxide"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "ROCm-Oxide: a Rust-hosted ROCm/HIPRTC runtime and Rust device-code prototype."
documentation = "https://docs.rs/rocm-oxide"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rocm", "hip", "gpu", "rust", "amdgpu"]
categories = ["api-bindings", "development-tools::ffi", "hardware-support"]

[build-dependencies]

[features]
default = []
device-spike = []
visual-demos = [
    "dep:ash",
    "dep:font8x8",
    "dep:gl",
    "dep:image",
    "dep:minifb",
    "dep:sdl2",
]
capture-demos = [
    "visual-demos",
    "dep:libwayshot-xcap",
    "dep:pipewire",
    "dep:rand",
    "dep:serde",
    "dep:wayland-client",
    "dep:xcap",
    "dep:zbus",
]

[dependencies]
ash = { version = "0.38", optional = true }
font8x8 = { version = "0.3", optional = true }
gl = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }
libwayshot-xcap = { version = "0.3", optional = true }
minifb = { version = "0.28", optional = true }
pipewire = { version = "0.9", optional = true }
rand = { version = "0.9", optional = true }
sdl2 = { version = "0.38", optional = true }
serde = { version = "1.0", optional = true }
wayland-client = { version = "0.31", optional = true }
xcap = { version = "0.9", optional = true }
zbus = { version = "5.6", optional = true }

[[example]]
name = "bvh_raytrace_benchmark"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "compiler_feature_lab"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "depth_aware_upscale"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "feature_showcase"
required-features = ["device-spike"]

[[example]]
name = "gravity_storm"
required-features = ["visual-demos"]

[[example]]
name = "hello_gpu_rust"
required-features = ["device-spike"]

[[example]]
name = "matrix_lens"
required-features = ["device-spike", "capture-demos"]

[[example]]
name = "performance_probe"
required-features = ["device-spike"]

[[example]]
name = "possibilities_window"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "rainbow_geometry_window"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "raytrace_world_gui"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "rust_device_add_one"
required-features = ["device-spike"]

[[example]]
name = "rust_device_generated_bindings"
required-features = ["device-spike"]

[[example]]
name = "rust_device_vector_add"
required-features = ["device-spike"]

[[example]]
name = "spectral_lattice"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "stress_3d_gui"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "stress_test_gui"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "temporal_upscale"
required-features = ["device-spike", "visual-demos"]

[[example]]
name = "vulkan_interactive_path_reconstruction_fixed4"
required-features = ["visual-demos"]

[[example]]
name = "vulkan_interactive_path_reconstruction_motion_denoise_v2"
required-features = ["visual-demos"]

[[example]]
name = "vulkan_orbit_field"
required-features = ["visual-demos"]

[[example]]
name = "vulkan_path_reconstruction"
required-features = ["visual-demos"]

[[example]]
name = "window_effects_lab"
required-features = ["device-spike", "capture-demos"]
