[package]
name = "rocm-oxide"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "ROCm-Oxide: a Rust-hosted ROCm/HIPRTC runtime and Rust device-code prototype."
documentation = "https://docs.rs/rocm-oxide"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rocm", "hip", "gpu", "rust", "amdgpu"]
categories = ["api-bindings", "development-tools::ffi", "hardware-support"]

[build-dependencies]

[features]
default = []
device-spike = []

[dependencies]

[[example]]
name = "feature_showcase"
required-features = ["device-spike"]

[[example]]
name = "hello_gpu_rust"
required-features = ["device-spike"]

[[example]]
name = "performance_probe"
required-features = ["device-spike"]

[[example]]
name = "rust_device_add_one"
required-features = ["device-spike"]

[[example]]
name = "rust_device_generated_bindings"
required-features = ["device-spike"]

[[example]]
name = "rust_device_vector_add"
required-features = ["device-spike"]
